tests/idris2/error/perror034/expected
1/1: Building Error (Error.idr)
Error: While processing right hand side of unnamed. When unifying:
    Type
and:
    ()
Mismatch between: Type and ().

Error:2:11--2:23
 1 | unnamed : ()
 2 | unnamed = (Nat) -> Nat
               ^^^^^^^^^^^^

Error: While processing right hand side of named. When unifying:
    Type
and:
    ()
Mismatch between: Type and ().

Error:5:9--5:27
 1 | unnamed : ()
 2 | unnamed = (Nat) -> Nat
 3 | 
 4 | named : ()
 5 | named = (arg : Nat) -> Nat
             ^^^^^^^^^^^^^^^^^^

